# kpscpath

kpscpath/: .gitignore  alembic.ini  check_db.py  check_descriptions.py  embed_topics.py  main.py  pyproject.toml  seed_syllabus.py  seed_topic_descriptions.py
kpscpath/alembic/: env.py
kpscpath/alembic/versions/: aa496f54db68_create_users_table.py  c195151352f3_create_otps_table.py
kpscpath/app/: main.py
kpscpath/app/api/v1/: router.py
kpscpath/app/api/v1/endpoints/: auth.py
kpscpath/app/core/: config.py  errors.py  response.py  security.py  supabase_client.py  token_budget.py
kpscpath/app/db/: session.py
kpscpath/app/middleware/: auth_guard.py
kpscpath/app/models/: otp.py  user.py
kpscpath/app/modules/ai/: router.py  schemas.py  service.py
kpscpath/app/modules/auth/: router.py  schemas.py  service.py
kpscpath/app/modules/onboarding/: router.py  schemas.py  service.py
kpscpath/app/modules/syllabus/: router.py  schemas.py  service.py
kpscpath/app/schemas/: user.py
kpscpath/app/services/: auth_service.py  otp_service.py
