[project]
name = "kpscpath-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosmtplib>=5.1.0",
    "alembic>=1.18.4",
    "anthropic>=0.88.0",
    "asyncpg>=0.31.0",
    "bcrypt<4.1",
    "docker>=7.1.0",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "google>=3.0.0",
    "google-generativeai>=0.8.6",
    "groq>=1.1.2",
    "jinja2>=3.1.6",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "redis>=7.3.0",
    "sentence-transformers>=5.3.0",
    "sqlalchemy>=2.0.48",
    "supabase>=2.28.2",
    "uvicorn>=0.41.0",
]
